--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>🏀 Hoop Uploader</h1>
     <form id="uploadForm">
-      <input type="file" name="file" required />
+      <input type="file" name="file" id="fileInput" multiple required />
       <button type="submit">Upload</button>
     </form>
     <div id="message"></div>
